--- a/TODO.txt
+++ b/TODO.txt
@@ -10,8 +10,8 @@ Grafics:
 b1	Connect Gui to Window
 b2	Implement the drawing of gui objects (requires c2 for testing)
 b3	Implement the drawing of sprites onto the window (requires c2 for testing)
-b4	Create a better interface to load images, see sprite.cpp for example code.
+b4 done	Create a better interface to load images, see sprite.cpp for example code.
 
 CMake:
-c1	Create the rules for the data folder
+c1 done	Create the rules for the data folder
 c2 done	Configure a game application
