--- a/TODO.txt
+++ b/TODO.txt
@@ -1,10 +1,10 @@
 The definition of finished is when the feature in question has been tested thoroughly with unittests and appears to be working as intended.
 
 Events:
-a1	Handling of keyboard input
-a2	Handling of mouse input
+a1 done	Handling of keyboard input
+a2 done	Handling of mouse input
 a3	Activating buttons being pressed
-a4	Create Event class with everything that might be useful to know when an event has occured
+a4 done	Create Event class with everything that might be useful to know when an event has occured
 
 Grafics: 
 b1	Connect Gui to Window
