--- a/TODO.txt
+++ b/TODO.txt
@@ -9,8 +9,12 @@ a4 done	Create Event class with everything that might be useful to know when an 
 Grafics: 
 b1	Connect Gui to Window
 b2	Implement the drawing of gui objects (requires c2 for testing)
-b3	Implement the drawing of sprites onto the window (requires c2 for testing)
+b3 done	Implement the drawing of sprites onto the window (requires c2 for testing)
 b4 done	Create a better interface to load images, see sprite.cpp for example code.
+b5 	Changable background
+
+Game Logic
+d1	Prepare for collision detection.
 
 CMake:
 c1 done	Create the rules for the data folder
